<resources>
    <string name="app_name">FLAG社</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_aboutus">关于我们</string>
    <string name="title_activity_personalinfo">个人资料</string>
    <string name="title_activity_resetpwdverify">手机验证</string>
    <string name="title_activity_resetpwd">设置密码</string>
    <string name="title_activity_modifynickname">修改昵称</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="title_activity_loaction_picker">选择地区</string>
    <string name="title_activity_messageinfo">消息详情</string>
    <string name="title_activity_banner_info">详情</string>
    <string name="title_activity_user_agreement">蓝海创意云用户服务协议</string>
    <string name="title_activity_account_combine">关联账号</string>
    <string name="v1000_toast_press_again_exit">再次点击退出应用</string>
    <string name="v1000_default_mask_load_fail">加载失败</string>
    <string name="v1000_default_mask_loading">加载中...</string>
    <string name="v1000_default_mask_unauth">登录开启新世界</string>
    <string name="v1000_default_mask_op_retry">点击重新加载</string>
    <string name="v1000_default_mask_op_auth">立即登录</string>
    <string name="tab_homeactivity_index">首页</string>
    <string name="tab_homeactivity_project">项目</string>
    <string name="tab_homeactivity_circle">圈子</string>
    <string name="tab_homeactivity_activities">活动</string>
    <string name="tab_homeactivity_mime">我的</string>
    <string name="v1010_toast_error_album_private">无法获取该图片</string>
    <string name="v1010_default_about_tv_copyright">苏州创意云网络科技有限公司 版权所有\nCopyright © 2008 &#8211; 2016 </string>
    <string name="v1000_default_about_tv_protocol"><u>《蓝海创意云用户服务协议》</u></string>
    <string name="v1000_default_about_tv_protocol2"><u>《入驻申请协议》</u></string>
    <string name="v1010_dialog_login_unexist">该账号尚未注册</string>
    <string name="v1010_dialog_login_nagetice_reinput">重新输入</string>
    <string name="v1010_dialog_login_positive_register">去注册</string>
    <string name="v1010_dialog_register_exist">号码已注册，请重新输入.</string>
    <string name="v1010_dialog_register_negative_reinput">重新输入</string>
    <string name="v1010_dialog_register_positive_login">去登录</string>
    <string name="cancel">取消</string>
    <string name="permit">确定</string>
    <string name="complete">完成</string>
    <string name="input_overlength">输入文字长度达到上限</string>
    <string name="no_internet">无可用网络</string>
    <string name="v1000_toast_error_subscribemyself">不能关注自己</string>
    <string name="v1000_toast_error_nullnick">请设置昵称</string>
    <string name="v1000_toast_error_nullavatar">请选择头像</string>
    <string name="v1010_default_setting_text_clean">清除缓存</string>
    <string name="v1010_default_setting_text_feedback">意见反馈</string>
    <string name="v1010_default_setting_text_update">版本检测</string>
    <string name="v1000_default_setting_text_aboutus">关于我们</string>
    <string name="v1010_default_setting_text_logout">退出登录</string>
    <string name="v1010_dialog_setting_content_logout">是否退出登录?</string>
    <string name="v1010_dialog_setting_content_clean">确定清除缓存?</string>
    <string name="v1010_default_feedback_hint_content">请输入您的问题/建议</string>
    <string name="v1010_default_feedback_text_upload">上传图片</string>
    <string name="v1010_default_feedback_hint_size">(最多5张，每张大小不超过5M)</string>
    <string name="v1010_default_feedback_hint_contact">请输入您的手机号码</string>
    <string name="v1010_default_feedback_btn_submit">提 交</string>
    <string name="v1010_toast_feedback_error_images_over_count">最多选择五张图片</string>
    <string name="v1010_toast_feedback_error_content_null">请输入您的问题/建议</string>
    <string name="v1010_toast_feedback_error_contact_null">请输入您的手机号码</string>
    <string name="v1010_dialog_feedback_content_error_upload">图片上传失败</string>
    <string name="v1010_dialog_feedback_positive_reupload">重新上传</string>
    <string name="v1010_dialog_feedback_content_success_feedback">意见反馈成功，我们会尽快处理</string>
    <string name="v1010_dialog_feedback_positive_close">好的</string>
    <string name="v1010_default_tp_failure_wxnotinstalled">未安装微信</string>
    <string name="v1010_default_tp_failure_QQnotinstalled">未安装QQ,无法分享</string>
    <string name="v1010_default_tp_failure_qqzonenotinstalled">未安装QQ空间,无法分享</string>
    <string name="v1010_default_tp_share_exit">分享取消</string>
    <string name="v1010_default_tp_share_success">分享成功</string>
    <string name="v1010_default_tp_share_failure">分享失败</string>
    <string name="todo">todo</string>
    <string name="v1000_accombine_hint_intent">为了给您更好的服务，请先关联一个平台账号</string>
    <string name="v1000_accombine_hint_account_has">关联已有平台账号</string>
    <string name="v1000_accombine_hint_account_donot_has">还没有平台账号?</string>
    <string name="v1000_accombine_hint_acount">请输入手机号/邮箱/ID号</string>
    <string name="v1000_accombine_hint_pwd">请输入登录密码</string>
    <string name="v1000_accombine_text_acount">账 号</string>
    <string name="v1000_accombine_text_pwd">密 码</string>
    <string name="v1000_accombine_text_combine">立即关联</string>
    <string name="v1000_accombine_text_register">快速注册</string>
    <string name="v1012_toast_error_text_timeout">网络连接超时，请重试</string>
    <string name="v1010_default_resetnick_btn_submit">保 存</string>
    <string name="v1010_default_bindphone_bindphone">绑定手机</string>
    <string name="v1010_default_updatephone_updatephone">修改手机号</string>
    <string name="v1010_default_bindphone_enter_verificationvode">请输入您收到的验证码!</string>
    <string name="v1010_default_bindphone_phonestyle_error">请输入11位正确的手机号</string>
    <string name="v1010_default_empty_phonenumber">请输入11位正确的手机号</string>
    <string name="v1000_toast_net_exception">网络连接超时</string>
    <string name="v1000_toast_server_error">网络异常、请稍后重试</string>
    <string name="v1000_toast_net_401">身份认证已过期</string>
    <string name="v1020_dialog_download_onmobile">当前为2G/3G/4G环境，继续下载将耗费较多流量</string>
    <string name="v1020_dialog_pbtn_onmobile">继续</string>
    <string name="v1020_dialog_nbtn_onmobile">取消</string>
    <string name="v1020_toast_download_onnotfound">文件不存在</string>
    <string name="v1020_toast_download_cancel">下载已取消</string>
    <string name="v1020_toast_download_success">保存成功</string>
    <string name="v1020_toast_download_onnoenoughspace">存储空间不足</string>
    <string name="v1020_toast_download_failure">保存失败</string>
    <string name="v1020_dialog_preview_onmobile_toolarge">文件大小为%s，当前为2G/3G/4G环境，继续预览将耗费较多流量</string>
    <string name="v1020_versionupdate_dialog_text_newversion">检测到新版本，版本号为:</string>
    <string name="v1020_versionupdate_dialog_text_update">是否更新</string>
    <string name="v1020_versionupdate_dialog_btn_download">免费下载</string>
    <string name="v1020_versionupdate_dialog_btn_nodownload">暂不下载</string>
    <string name="v1020_versionupdate_text_already_newversion">当前已是最新版本</string>
    <string name="v1020_versionupdate_dialog_text_install">新版本下载完成，是否立即安装</string>
    <string name="v1020_versionupdate_dialog_btn_install">立即安装</string>
    <string name="v1020_versionupdate_dialog_btn_update">立即更新</string>
    <string name="v1020_versionupdate_text_download_fuilure">下载失败</string>
    <string name="v1020_versionupdate_dialog_btn_noupdate">以后再说</string>
    <string name="v1020_versionupdate_notification_ticker">版本更新通知</string>
    <string name="v1020_versionupdate_dialog_notification_title">FLAG社</string>
    <string name="v1020_versionupdate_dialog_notification_description">版本更新提醒！发现新版本啦，更新后享受更多功能。</string>
    <string name="v1020_versionupdate_dialog_onmobile_remind">当前为2G/3G/4G环境，继续下载可能会耗费较多流量</string>
    <string name="v1020_versionupdate_dialog_btn_cancel">取消</string>
    <string name="v1022_dialog_permission_camera">暂无相机权限，请在权限管理中允许相机访问权限</string>
    <string name="v1022_dialog_permission_sd">暂无存储读写权限，请在权限管理中允许存储访问权限</string>
    <string name="v1022_dialog_permission_pbtn">去设置</string>
    <string name="v1022_dialog_permission_nbtn">暂不设置</string>
    <string name="v1030_notify_ticker">新通知</string>
    <string name="v1000_default_login_hint_account">请输入手机号/邮箱/ID号</string>
    <string name="v1000_default_login_hint_password">密码</string>
    <string name="v1000_default_login_btn_login">登 录</string>
    <string name="v1000_default_login_href_forgetpwd">忘记密码?</string>
    <string name="v1000_default_login_stroll">随便逛逛</string>
    <string name="v1000_default_login_new_user_register">新用户注册</string>
    <string name="v1000_default_login_creation_with_the_best_people">来最好的地方和最好的人一起创作</string>
    <string name="v1000_default_login_null_account">请输入账号</string>
    <string name="v1000_default_login_null_pwd">请输入密码</string>
    <string name="v1000_default_register_hint_account">请输入11位手机号</string>
    <string name="v1000_default_register_hint_verifycode">请输入验证码</string>
    <string name="v1000_default_register_btn_getverify">获取验证码</string>
    <string name="v1000_default_register_btn_register">立即注册</string>
    <string name="v1000_default_register_cb_protocol">阅读并同意</string>
    <string name="v1000_default_register_href_protocol">《蓝海创意云用户服务协议》</string>
    <string name="v1000_default_register_toast_read_agreement">请先同意用户协议</string>
    <string name="v1000_toast_register_error_login_onback">后台登录失败，请手动登录</string>
    <string name="v1000_toast_error_null_pwd">请输入密码!</string>
    <string name="v1000_toast_register_text_pwd_illegal">密码为6-20位数字/字母组合</string>
    <string name="v1000_default_userinfocreate_hint_create_nickname">请设置您的昵称</string>
    <string name="v1000_default_userinfocreate_hint_create_sign">请设置个人专属签名</string>
    <string name="v1000_default_userinfocreate_text_next">下一步</string>
    <string name="v1000_default_userinfocreate_text_jump">跳过</string>
    <string name="v1000_default_register_hint_pwd">请设置6-20位密码!</string>
    <string name="v1000_title_activity_accountmanage">账号管理</string>
    <string name="v1000_default_accountmanage_text_loginpwd">登录密码</string>
    <string name="v1000_default_accountmanage_text_to_modify">修改</string>
    <string name="v1000_default_accountmanage_text_mobile_bind">手机绑定</string>
    <string name="v1000_default_accountmanage_text_three_account">三方账号</string>
    <string name="v1000_default_accountmanage_text_realname_authentication">实名认证</string>
    <string name="v1000_default_accountmanage_text_realname_to_authentication">去认证</string>
    <string name="v1000_default_changepwd_hint_text_currentpwd">请输入当前密码</string>
    <string name="v1000_default_changepwd_hint_text_newpwd">请输入新密码</string>
    <string name="v1000_default_changepwd_hint_text_newpwd_again">请重复输入新密码</string>
    <string name="v1000_default_changepwd_button_text_save">保存</string>
    <string name="v1000_title_activity_thirdaccount">三方账号</string>
    <string name="wechat">微信</string>
    <string name="QQ">QQ</string>
    <string name="sinaweibo">微博</string>
    <string name="v1000_default_thirdaccount_text_binded">已绑定</string>
    <string name="v1000_default_thirdaccount_text_to_bind">去绑定</string>
    <string name="v1000_title_activity_settings">设置</string>
    <string name="v1000_default_accountcontact_hint_account">请输入手机号/邮箱/ID号</string>
    <string name="v1000_title_activity_article_publish">发布文章</string>
    <string name="v1000_default_articlepublish_text_title">标题</string>
    <string name="v1000_default_articlepublish_hint_title_remind">必填，30字内</string>
    <string name="v1000_default_articlepublish_hint_article_describe">正文内容（必填）</string>
    <string name="v1000_default_articlepublish_text_upload_img">上传图片</string>
    <string name="v1000_default_articlepublish_text_max_imagecount">最多9张</string>
    <string name="v1000_default_fastbind_text_phone">手机号</string>
    <string name="v1000_default_fastbind_text_verifycode">验证码</string>
    <string name="v1000_default_fastbind_text_password">密码</string>
    <string name="v1000_default_fastbind_hint_phone">请输入手机号</string>
    <string name="v1000_default_fastbind_hint_password">请设置6-20位登录密码</string>
    <string name="v1000_default_fastbind_fast_bind">立即绑定</string>
    <string name="v1000_default_fastbind_fast_bind_skip">跳过</string>
</resources>