<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:orientation="vertical"
    tools:context=".module.home.ui.ac.HomeActivity">

    <include
        layout="@layout/view_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- 分割线-->
        <View
            android:id="@+id/div_tab_bar"
            android:layout_width="match_parent"
            android:background="@color/cyy_h1"
            android:layout_height="1px" />

        <LinearLayout
            android:id="@+id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_index"
                style="@style/tab_menu_item"
                android:checked="false"
                android:drawableTop="@drawable/tab_home_index_selector"
                android:text="@string/tab_homeactivity_index" />

            <RadioButton
                android:id="@+id/rb_project"
                style="@style/tab_menu_item"
                android:checked="false"
                android:drawableTop="@drawable/tab_home_project_selector"
                android:text="@string/tab_homeactivity_project" />

            <RadioButton
                android:id="@+id/rb_topic"
                style="@style/tab_menu_item"
                android:checked="false"
                android:drawableTop="@drawable/tab_home_circle_selector"
                android:text="@string/tab_homeactivity_circle" />

            <RadioButton
                android:id="@+id/rb_activity"
                style="@style/tab_menu_item"
                android:drawableTop="@drawable/tab_home_activities_selector"
                android:text="@string/tab_homeactivity_activities" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/rb_mine"
                    style="@style/tab_menu_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/tab_home_mime_selector"
                    android:text="@string/tab_homeactivity_mime" />

                <individual.leobert.uilib.numbadge.NumBadge
                    android:id="@+id/home_message_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="30dp"
                    app:backgroundShape="rectAngle" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
