<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fast_bind"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".module.user.register.ui.ac.FastBindActivity">

    <include
        layout="@layout/view_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/ll_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/absbar_height"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="30dp"-->
        <!--android:visibility="gone"-->
        <!--android:background="@color/gray_ptr">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:text="@string/v1000_default_fastbind_bind_remind"-->
        <!--android:textSize="@dimen/fs_hint_special" />-->
        <!--</FrameLayout>-->

        <include layout="@layout/line_gray_10dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/fastbind_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:minWidth="42dp"
                android:text="@string/v1000_default_fastbind_text_phone"
                android:textSize="@dimen/fs_content" />

            <View
                android:id="@+id/line"
                style="@style/divider_y_text"
                android:layout_toRightOf="@+id/fastbind_tv_phone" />


            <EditText
                android:id="@+id/fastbind_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/line"
                android:background="@null"
                android:hint="@string/v1000_default_fastbind_hint_phone"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="@dimen/fs_content" />

            <ImageButton
                android:id="@+id/fastbind_ibtn_clearaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/fab_margin"
                android:background="@color/transparent"
                android:src="@drawable/v1000_drawable_guanb" />

        </RelativeLayout>

        <include layout="@layout/line_gray_1dp" />

        <LinearLayout
            android:id="@+id/register_ll_verifycode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fastbind_tv_account2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:minWidth="42dp"
                android:text="@string/v1000_default_fastbind_text_verifycode"
                android:textSize="@dimen/fs_content" />

            <View style="@style/divider_y_text" />

            <EditText
                android:id="@+id/fastbind_et_verifycode"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/v1000_default_register_hint_verifycode"
                android:inputType="number"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/fs_content" />

            <View style="@style/divider_y_text" />

            <Button
                android:id="@+id/fastbind_btn_getverifycode"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:paddingLeft="@dimen/text_padding_default"
                android:paddingRight="@dimen/text_padding_default"
                android:text="@string/v1000_default_register_btn_getverify"
                android:textColor="@color/main_green_dark" />
        </LinearLayout>

        <include layout="@layout/line_gray_1dp" />

        <RelativeLayout
            android:id="@+id/rl_resetpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/fastbind_tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:minWidth="42dp"
                android:text="@string/v1000_default_fastbind_text_password"
                android:textSize="@dimen/fs_content" />

            <View
                android:id="@+id/line4"
                style="@style/divider_y_text"
                android:layout_toRightOf="@+id/fastbind_tv_pwd" />

            <EditText
                android:id="@+id/fastbind_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/line4"
                android:background="@null"
                android:hint="@string/v1000_default_fastbind_hint_password"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/text_gray_content"
                android:textSize="@dimen/fs_content" />

            <CheckBox
                android:id="@+id/cb_set_pwd_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@null"
                android:button="@drawable/cbs_toggle_pwd_visible" />
        </RelativeLayout>

        <include layout="@layout/line_gray_1dp" />

        <LinearLayout
            android:id="@+id/register_ll_protocol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/register_cb_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:button="@drawable/cbselector_small2"
                android:checked="false"
                android:text="@string/v1000_default_register_cb_protocol"
                android:textColor="@color/text_gray_content"
                android:textSize="@dimen/fs_content" />

            <TextView
                android:id="@+id/register_tv_protocol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v1000_default_register_href_protocol"
                android:textColor="@color/text_gray_content"
                android:textSize="@dimen/fs_content" />
        </LinearLayout>


        <Button
            android:id="@+id/fastbind_btn_bind"
            style="@style/style_button.green"
            android:layout_marginTop="15dp"
            android:text="@string/v1000_default_fastbind_fast_bind" />


    </LinearLayout>

    <TextView
        android:id="@+id/fastbind_tv_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/ll_group"
        android:padding="@dimen/text_padding_default"
        android:textSize="@dimen/fs_hint_special" />


    <TextView
        android:id="@+id/fastbind_btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_group"
        android:padding="@dimen/text_padding_default"
        android:text="@string/v1000_default_fastbind_fast_bind_skip" />

    <!--<include layout="@layout/bar_title_simple" />-->
    <include layout="@layout/toolbar_title_theme1" />
</RelativeLayout>
