<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".module.pub.ui.AboutUsActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/text_gray_content"
        android:textSize="@dimen/fs_title_special" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_gray_hint"
        android:textSize="@dimen/fs_content" />


    <TextView
        android:id="@+id/schema1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/schema2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/v1000_default_about_tv_protocol"
        android:textColor="@color/main_green_dark"
        android:textSize="@dimen/fs_title_big" />

    <TextView
        android:id="@+id/schema2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/v1000_default_about_tv_protocol2"
        android:textColor="@color/main_green_dark"
        android:textSize="@dimen/fs_title_big"
        android:visibility="gone" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/v1010_default_about_tv_copyright"
        android:textColor="@color/text_gray_hint"
        android:textSize="@dimen/fs_content" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:src="@drawable/v1000_drawable_icon_launcher_roundrect" />

    <!--<include layout="@layout/bar_title_simple" />-->
    <include layout="@layout/toolbar_title_theme1" />
</RelativeLayout>
